html/css/less/main.less
/* ... */
#mod-upgrade {
  max-width: 450px;
  min-width: 350px;
}

#mod-transport-window {
  bottom: 48px;
  right: 310px;
  top: initial;
  left: initial;
  background: rgba(17, 17, 17, 0.9);
  padding: 50px 40px 15px 40px;
  z-index: 1001;
  .mod-midi-icon {
    width: auto !important;
    padding-left: 25px;
    background-position: 5% 45% !important;
    background-image: url(../img/icons/25/midi.png);
    background-size: 15px;
    background-repeat: no-repeat;
  }
}
/* ... */

